[project]
name = "task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-core>=0.3.64",
    "langchain-openai>=0.3.21",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]

[tool.uv.workspace]
members = [
    "envi",
]
